1596 - drag icon visibility fix

--- a/stencil-workspace/src/components/modus-content-tree/modus-tree-view-item/modus-tree-view-item.scss
+++ b/stencil-workspace/src/components/modus-content-tree/modus-tree-view-item/modus-tree-view-item.scss
@@ -63,7 +63,8 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    width: $rem-24px !important;
+    margin-left: 0.3rem;
+    width: $rem-24px;
 
     &.drag-icon {
       cursor: grab !important;
